src/app/components/component-view/playgrounds/auth-playground/auth-playground.component.css
:host {
  --auth-component-distribution: 1fr;
  --auth-component-position: auto;
  --playground-width: 95%;
  --section-row-gap: 8em;

  --grid-rows: 2;
  --grid-rows-display: repeat(var(--grid-rows), auto);
  --grid-columns-display: 1fr var(--auth-component-distribution); 


  --component-column-start: 2;
  --component-column-end: 3;
  --component-row-start: 1;
  --component-row-end: 3;

  
  @media (max-height: 800px) {
    --section-row-gap: 2em;
  }

  @media (min-width: 1400px) {
    /* For the desktop devices, center auth component to the center, as there might be more space available */
    --auth-component-position: center;
  }

  @media (max-width: 1650px) {
    --auth-component-distribution: auto;
  }
  

  @media (max-width: 1400px) {
    --playground-width: 80%;
    --grid-rows: 3;
    --grid-columns: 1;
    --grid-columns-display: 1fr;

    --component-column-start: 1;
    --component-column-end: 2;
    --component-row-start: 3;
    --component-row-end: 4;
  }
}

.link {
  color: #2222ff;

  &:hover {
    text-decoration: underline;
  }
}

.section-title {
  text-align: center;
  font-size: x-large;
  margin-bottom: 1rem;
}

.subsection-title {
  text-align: center;
  font-size: 20px;
  margin-bottom: 0.5rem;
}

.main-section {
  display: flex;
  justify-content: center;
  align-items: center;

  & .container {
    display: grid;
    grid-template-columns: var(--grid-columns-display);
    grid-template-rows: var(--grid-rows-display);
    column-gap: 1em;
    row-gap: var(--section-row-gap);
    font-size: large;
    max-width: var(--playground-width);

    & .introduction {
      grid-column-start: 1;
      grid-column-end: 2;
      grid-row-start: 1;
      grid-row-end: 2;
    }

    & .custom-section {
      grid-column-start: 1;
      grid-column-end: 2;
      grid-row-start: 2;
      grid-row-end: 3;

      & .custom-container {
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr;

        & .templates-section {

          & .centered-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;

            & .templates-form {

              & label {
                display: block;
                margin-bottom: 0.2rem;

                & input {
                  margin-right: 0.5rem;
                }
              }
            }
          }
        }

        & .customized-colors-section {
          display: flex;
          justify-content: center;
          align-items: center;
          flex-direction: column;

          & .customized-colors-form {

            & button {
              margin-top: 0.5rem;
              padding: 0.4em 0.8em;
              color: #fff;
              border: none;
              border-radius: 8px;
              font-size: 1rem;
              cursor: pointer;
              min-width: 5rem;
            }

            & .custom-buttons-container {
              display: flex;
              justify-content: space-between;

              & .apply-button {
                background-color: #3498db;
              }
              
              & .random-button {
                text-align: center;
                background-color: #ff6fff;
              }
            }


            & .color-input-container {
              margin-bottom: 0.2rem;
              display: flex;
              align-items: center;

              & input {
                max-width: 100px;
                margin-left: 5px;
                border-radius: .25rem;
                outline: none;
                font-size: 1rem;
                border: .1rem solid #9c9c9c;
                background-color: #e8e4ec;
                transition: border-color .2s, box-shadow .2s;
                height: 1.5rem;

                &:focus {
                  border-color: #3b82f6;
                  box-shadow: 0 0 0 0.125rem rgba(59, 130, 246, 0.25);
                }
              }

            }

          }
        }
      }


    }

    &>.main-component {
      grid-column-start: var(--component-column-start);
      grid-column-end: var(--component-column-end);
      grid-row-start: var(--component-row-start);
      grid-row-end: var(--component-row-end);
      justify-self: var(--auth-component-position);
      align-self: var(--auth-component-position);
    }

  }
}

